--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Gradle project-specific cache directory
+.gradle
+.project
+.classpath
+.settings/
+
+# Gradle build output directory
+build
+/bin/
+
+# IDE files
+.idea
+
 # Compiled class file
 *.class
 
