--- a/build.gradle
+++ b/build.gradle
@@ -6,5 +6,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'uk.co.caprica', name: 'vlcj', version: '3.12.1'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'junit:junit:4.12'
 }
