--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,5 @@ dependencies {
     compile group: 'uk.co.caprica', name: 'vlcj', version: '3.12.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'junit:junit:4.12'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.27.2.1'
 }
