--- a/build.gradle
+++ b/build.gradle
@@ -9,4 +9,6 @@ dependencies {
     compile group: 'uk.co.caprica', name: 'vlcj', version: '3.12.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'junit:junit:4.12'
+    // https://mvnrepository.com/artifact/com.toedter/jcalendar
+    compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
 }
