--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     // https://mvnrepository.com/artifact/com.toedter/jcalendar
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.27.2.1'
 }
