--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,6 @@ dependencies {
     // https://mvnrepository.com/artifact/com.toedter/jcalendar
     compile group: 'com.toedter', name: 'jcalendar', version: '1.4'
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.27.2.1'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
 }
