--- a/build.gradle
+++ b/build.gradle
@@ -22,4 +22,7 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.1'
     // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.2.5'
+    // https://mvnrepository.com/artifact/org.apache.httpcomponents/httpmime
+    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.1'
+
 }
